# Learn-RAG

./: 10_multi_query_retrieval.py  11_reciprocal_rank_fusion.py  1_ingestion_pipeline.py  2_retrieval_pipeline.py  3_answer_generation.py  4_history_aware_generation.py  5_character_text_splitter.py  6_semantic_chunking.py  7_agentic_chunking.py  9_retrieval_methods.py  main.py  pyproject.toml
db/chroma_db/d9604c25-7b1e-40de-a322-d0b7a7734f10/: index_metadata.pickle
docs/: Nvidia.txt:Zone.Identifier
